--- a/gui.ui
+++ b/gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>799</width>
-    <height>447</height>
+    <width>811</width>
+    <height>639</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -595,7 +595,7 @@
     <property name="geometry">
      <rect>
       <x>270</x>
-      <y>230</y>
+      <y>240</y>
       <width>261</width>
       <height>121</height>
      </rect>
@@ -668,7 +668,7 @@
       <x>540</x>
       <y>240</y>
       <width>251</width>
-      <height>121</height>
+      <height>201</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -683,7 +683,7 @@
        <x>10</x>
        <y>10</y>
        <width>231</width>
-       <height>94</height>
+       <height>162</height>
       </rect>
      </property>
      <layout class="QFormLayout" name="formLayout_7">
@@ -729,16 +729,44 @@
         </property>
        </widget>
       </item>
+      <item row="3" column="1">
+       <widget class="QSpinBox" name="spinBox_max_y">
+        <property name="maximum">
+         <number>100000</number>
+        </property>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_31">
+        <property name="text">
+         <string>Y max</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_37">
+        <property name="text">
+         <string>Y min</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QSpinBox" name="spinBox_min_y">
+        <property name="maximum">
+         <number>100000</number>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </widget>
    <widget class="QWidget" name="horizontalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>370</y>
-      <width>385</width>
-      <height>32</height>
+      <x>10</x>
+      <y>440</y>
+      <width>781</width>
+      <height>41</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -767,9 +795,23 @@
       </widget>
      </item>
      <item>
+      <widget class="QLineEdit" name="lineEdit_color">
+       <property name="text">
+        <string>black</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="pushButton_plot">
        <property name="text">
         <string>Plot</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_save_plot">
+       <property name="text">
+        <string>Save plot</string>
        </property>
       </widget>
      </item>
@@ -781,7 +823,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>799</width>
+     <width>811</width>
      <height>22</height>
     </rect>
    </property>
