--- a/gui.ui
+++ b/gui.ui
@@ -171,7 +171,7 @@
       <rect>
        <x>130</x>
        <y>60</y>
-       <width>114</width>
+       <width>119</width>
        <height>211</height>
       </rect>
      </property>
@@ -249,6 +249,20 @@
        <widget class="QLabel" name="label_8">
         <property name="text">
          <string>TiO</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_39">
+        <property name="text">
+         <string>C2H2</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
+       <widget class="QDoubleSpinBox" name="doubleSpinBox_C2H2">
+        <property name="decimals">
+         <number>4</number>
         </property>
        </widget>
       </item>
