--- a/gui.ui
+++ b/gui.ui
@@ -217,7 +217,7 @@
       <item row="2" column="1">
        <widget class="QDoubleSpinBox" name="doubleSpinBox_VO">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="decimals">
          <number>4</number>
